--- a/config/medusa_downloader.yml.template
+++ b/config/medusa_downloader.yml.template
@@ -11,7 +11,7 @@ development:
   incoming_queue: client_to_downloader_dev
   amqp:
     port: 5672
-  nginx_url: http://localhost:8080/downloads
+  nginx_url: http://localhost:8080
 test:
   admin_email: hding2@illinois.edu
   smtp:
@@ -24,4 +24,4 @@ test:
   incoming_queue: client_to_downloader_test
   amqp:
     port: 5672
-  nginx_url: http://localhost:8080/downloads
+  nginx_url: http://localhost:8080
