Make the http digest auth for /downloads/create optional so that it can done in nginx instead (or left out entirely).

--- a/config/medusa_downloader.yml.template
+++ b/config/medusa_downloader.yml.template
@@ -27,5 +27,6 @@ test:
   nginx_url: http://localhost:8080
   auth:
     realm: request_creators
+    active: true
     users:
       user: password
