--- a/config/medusa_downloader.yml.template
+++ b/config/medusa_downloader.yml.template
@@ -25,8 +25,10 @@ test:
   amqp:
     port: 5672
   nginx_url: http://localhost:8080
-  auth:
-    realm: request_creators
-    active: true
-    users:
-      user: password
+  #This is not used anymore, though if you use digest auth on the nginx you
+  #should record the user/pw somewhere
+#  auth:
+#    realm: request_creators
+#    active: true
+#    users:
+#      user: password
