--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
 before_script:
 - cp config/medusa_downloader.yml.template config/medusa_downloader.yml
 - cp config/database.yml.travis config/database.yml
+- cp config/secrets.yml.template config/secrets.yml
 - bundle exec rake db:create
 - bundle exec rake db:schema:load
 - bundle exec rake db:seed
