Updated to rails 7 and ruby 3 and to use docker for development and testing

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@
 !/log/.keep
 /tmp
 /coverage
+/.idea
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+.byebug_history
