--- a/docker/downloader/Dockerfile-test
+++ b/docker/downloader/Dockerfile-test
@@ -17,6 +17,8 @@ WORKDIR /app
 
 COPY Gemfile Gemfile.lock ./
 
+COPY config/database.yml.test config/database.yml
+
 RUN mkdir -p /home/downloader/storage
 
 RUN mkdir -p /home/downloader/mnt/medusa-demo-main-ro
