--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -19,7 +19,7 @@ services:
       - "3000:3000"
     volumes:
       - .:/app
-    command: bash -c 'sleep 10 && bundle exec rails db:drop db:create db:schema:load && bundle exec rails db:fixtures:load && bundle exec rails cucumber'
+    command: bash -c 'sleep 10 && ls -l config && bundle exec rails db:drop db:create db:schema:load && bundle exec rails db:fixtures:load && bundle exec rails cucumber'
   rabbitmq:
     build:
       context: .
